add structur hero home

--- a/index.html
+++ b/index.html
@@ -39,6 +39,21 @@
     </nav>
     <!-- End Navbar -->
 
+    <!-- Hero Home -->
+    <section class="home-hero">
+      <div id="greet-hero">
+        <h1>Membantu Menjaga Kalori Demi Kesehatan Tubuh</h1>
+        <p>Platform kesehatan dengan membantu<br />setiap orang untuk menjaga kesehatan mereka berdasarkan makanan yang mereka konsumsi.</p>
+        <div id="button-hero">
+          <a href="#"><button>Get Started</button></a>
+        </div>
+      </div>
+      <div>
+        <img id="img-hero" src="assets/img-landingpage/image-hero.png" alt="image" />
+      </div>
+    </section>
+    <!-- End Hero Home -->
+
     <!-- Footer -->
     <footer>
       <div class="footer">
