add structur hero page 2

--- a/index.html
+++ b/index.html
@@ -54,6 +54,16 @@
     </section>
     <!-- End Hero Home -->
 
+    <!-- Hero Page 2 -->
+    <section class="hero2">
+      <div id="greet-hero2">
+        <h2>Hidup Sehat Dengan Giji Seimbang</h2>
+        <p>Giji seimbang diperlukan untuk tubuh dalam menjaga kesehatan mengatur ativitas dan keseimbangan fungsi dalam kehidupan sehari hari</p>
+        <img id="img-hero2" src="assets/img-landingpage/image-hero2.png" alt="image" />
+      </div>
+    </section>
+    <!-- End Hero Page 2 -->
+
     <!-- Footer -->
     <footer>
       <div class="footer">
