add structur calories

--- a/index.html
+++ b/index.html
@@ -64,6 +64,22 @@
     </section>
     <!-- End Hero Page 2 -->
 
+    <!-- Hero Page 3 Track Calories -->
+    <section class="track-calories">
+      <div id="calories">
+        <h2>Track Your Calories</h2>
+        <p>Mengetahui dan menghitung jumlah kalori makanan yang dikonsumsi merupakan hal yang penting bagi kebutuhan tubuh loh!</p>
+        <p>Yuk hitung kalori harianmu!</p>
+        <div id="button-hero">
+          <a href="tracking.html"><button>Track Your Calories</button></a>
+        </div>
+      </div>
+      <div>
+        <img id="img-calories" src="assets/img-landingpage/image-calories.png" alt="image" />
+      </div>
+    </section>
+    <!-- End Hero Page 3 Track Calories -->
+
     <!-- Footer -->
     <footer>
       <div class="footer">
