add structur page bmi

--- a/index.html
+++ b/index.html
@@ -80,6 +80,22 @@
     </section>
     <!-- End Hero Page 3 Track Calories -->
 
+    <!-- Hero Page 3 Track Calories -->
+    <section class="track-bmi">
+      <div id="bmi">
+        <h2>Track Your BMI</h2>
+        <p>Mengetahui berapa berat badan ideal yang perlu kamu ketahui, caranya adalah dengan menghitung Body Mass Index (BMI).</p>
+        <p>Hitung Body Mass Index kamu!</p>
+        <div id="button-bmi">
+          <a href="#"><button>Track Your BMI</button></a>
+        </div>
+      </div>
+      <div>
+        <img id="img-bmi" src="assets/img-landingpage/f-bmi.jpg" alt="image" />
+      </div>
+    </section>
+    <!-- End Hero Page 3 Track Calories -->
+
     <!-- Footer -->
     <footer>
       <div class="footer">
