add button scroll

--- a/index.html
+++ b/index.html
@@ -15,17 +15,17 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light">
       <div class="container-fluid">
-        <a class="navbar-brand" href="index-landingpage.html"><img src="assets/img-landingpage/logo-nav.png" alt="logo" style="height: 50px" /></a>
+        <a class="navbar-brand" href="index.html"><img src="assets/img-landingpage/logo-nav.png" alt="logo" style="height: 50px" /></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link active" aria-current="page" href="index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Artikel</a>
+              <a class="nav-link active" aria-current="page" href="article.html">Artikel</a>
             </li>
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="#">Hitung Kalori</a>
@@ -45,7 +45,7 @@
         <h1>Membantu Menjaga Kalori Demi Kesehatan Tubuh</h1>
         <p>Platform kesehatan dengan membantu<br />setiap orang untuk menjaga kesehatan mereka berdasarkan makanan yang mereka konsumsi.</p>
         <div id="button-hero">
-          <a href="#"><button>Get Started</button></a>
+          <a href="#tracking-cal"><button>Get Started</button></a>
         </div>
       </div>
       <div>
@@ -65,7 +65,7 @@
     <!-- End Hero Page 2 -->
 
     <!-- Hero Page 3 Track Calories -->
-    <section class="track-calories">
+    <section class="track-calories" id="tracking-cal">
       <div id="calories">
         <h2>Track Your Calories</h2>
         <p>Mengetahui dan menghitung jumlah kalori makanan yang dikonsumsi merupakan hal yang penting bagi kebutuhan tubuh loh!</p>
@@ -80,21 +80,23 @@
     </section>
     <!-- End Hero Page 3 Track Calories -->
 
-    <!-- Hero Page 3 Track Calories -->
+    <!-- Hero Page 4 Track BMI -->
     <section class="track-bmi">
       <div id="bmi">
         <h2>Track Your BMI</h2>
-        <p>Mengetahui berapa berat badan ideal yang perlu kamu ketahui, caranya adalah dengan menghitung Body Mass Index (BMI).</p>
+        <p>Mengetahui berapa berat badan ideal dan bisa mengatur pola hidup sehat, caranya adalah dengan menghitung Body Mass Index (BMI).</p>
         <p>Hitung Body Mass Index kamu!</p>
         <div id="button-bmi">
           <a href="#"><button>Track Your BMI</button></a>
         </div>
       </div>
       <div>
-        <img id="img-bmi" src="assets/img-landingpage/f-bmi.jpg" alt="image" />
+        <img id="img-bmi" src="assets/img-landingpage/image-bmi.jpg" alt="image" />
       </div>
     </section>
-    <!-- End Hero Page 3 Track Calories -->
+    <!-- End Hero Page 4 Track BMI -->
+
+    <button id="scroll-to-top-btn"></button>
 
     <!-- Footer -->
     <footer>
