add button scroll

--- a/article.html
+++ b/article.html
@@ -112,6 +112,8 @@
       </div>
     </section>
 
+    <button id="scroll-to-top-btn"></button>
+
     <!-- Footer -->
     <footer>
       <div class="footer">
