--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
               <a class="nav-link active" aria-current="page" href="article.html">Artikel</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Hitung Kalori</a>
+              <a class="nav-link active" aria-current="page" href="kalori.html">Hitung Kalori</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Hitung BMI</a>
+              <a class="nav-link active" aria-current="page" href="bmi.html">Hitung BMI</a>
             </li>
           </ul>
         </div>
