--- a/article.html
+++ b/article.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
     <link rel="stylesheet" href="style.css" />
 
+    <!--tailwind css-->
+    <script src="https://cdn.tailwindcss.com"></script>
+
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
 
@@ -13,28 +16,34 @@
   </head>
   <body>
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="index.html"><img src="assets/img-landingpage/logo-nav.png" alt="logo" style="height: 50px" /></a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="article.html">Artikel</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="kalori.html">Hitung Kalori</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="bmi.html">Hitung BMI</a>
-            </li>
-          </ul>
+    <nav class="bg-[#d7ffe3]">
+      <div class="max-w-7xl mx-auto px-2 sm:px-6 lg:px-8">
+        <div class="relative flex items-center justify-between h-16">
+          <!-- Logo -->
+          <div class="flex-shrink-0">
+            <img class="h-[50px]" src="assets/img-landingpage/logo-nav.png" alt="" />
+          </div>
+
+          <!-- Navigation links -->
+          <div class="flex-grow hidden md:block">
+            <ul class="flex space-x-4">
+              <li><a href="index.html" class="text-black hover:bg-[#9aff9a] px-3 py-2 rounded-md text-sm font-medium">Home</a></li>
+              <li><a href="article.html" class="text-black hover:bg-[#9aff9a] px-3 py-2 rounded-md text-sm font-medium">Artikel</a></li>
+              <li><a href="kalori.html" class="text-black hover:bg-[#9aff9a] px-3 py-2 rounded-md text-sm font-medium">Hitung Kalori</a></li>
+              <li><a href="bmi.html" class="text-black hover:bg-[#9aff9a] px-3 py-2 rounded-md text-sm font-medium">Hitung BMI</a></li>
+            </ul>
+          </div>
         </div>
+      </div>
+
+      <!-- Mobile menu (hidden by default) -->
+      <div class="md:hidden bg-[#d7ffe3]">
+        <ul class="px-2 pt-2 pb-3 sm:px-3">
+          <li><a href="index.html" class="text-black hover:bg-[#9aff9a] hover:text-white block px-3 py-2 rounded-md text-base font-medium">Home</a></li>
+          <li><a href="artikel.html" class="text-black hover:bg-[#9aff9a] hover:text-white block px-3 py-2 rounded-md text-base font-medium">Artikel</a></li>
+          <li><a href="kalori.html" class="text-black hover:bg-[#9aff9a] hover:text-white block px-3 py-2 rounded-md text-base font-medium">Hitung Kalori</a></li>
+          <li><a href="bmi.html" class="text-black hover:bg-[#9aff9a] hover:text-white block px-3 py-2 rounded-md text-base font-medium">Hitung BMI</a></li>
+        </ul>
       </div>
     </nav>
     <!-- End Navbar -->
