--- a/bmi.html
+++ b/bmi.html
@@ -29,7 +29,7 @@
           <div class="flex-grow hidden md:block">
             <ul class="flex space-x-4">
               <li><a href="index.html" class="text-black hover:bg-[#9aff9a] px-3 py-2 rounded-md text-sm font-medium">Home</a></li>
-              <li><a href="artikel.html" class="text-black hover:bg-[#9aff9a] px-3 py-2 rounded-md text-sm font-medium">Artikel</a></li>
+              <li><a href="article.html" class="text-black hover:bg-[#9aff9a] px-3 py-2 rounded-md text-sm font-medium">Artikel</a></li>
               <li><a href="kalori.html" class="text-black hover:bg-[#9aff9a] px-3 py-2 rounded-md text-sm font-medium">Hitung Kalori</a></li>
               <li><a href="bmi.html" class="text-black hover:bg-[#9aff9a] px-3 py-2 rounded-md text-sm font-medium">Hitung BMI</a></li>
             </ul>
@@ -41,7 +41,7 @@
       <div class="md:hidden bg-[#d7ffe3]">
         <ul class="px-2 pt-2 pb-3 sm:px-3">
           <li><a href="index.html" class="text-black hover:bg-[#9aff9a] hover:text-white block px-3 py-2 rounded-md text-base font-medium">Home</a></li>
-          <li><a href="artikel.html" class="text-black hover:bg-[#9aff9a] hover:text-white block px-3 py-2 rounded-md text-base font-medium">Artikel</a></li>
+          <li><a href="article.html" class="text-black hover:bg-[#9aff9a] hover:text-white block px-3 py-2 rounded-md text-base font-medium">Artikel</a></li>
           <li><a href="kalori.html" class="text-black hover:bg-[#9aff9a] hover:text-white block px-3 py-2 rounded-md text-base font-medium">Hitung Kalori</a></li>
           <li><a href="bmi.html" class="text-black hover:bg-[#9aff9a] hover:text-white block px-3 py-2 rounded-md text-base font-medium">Hitung BMI</a></li>
         </ul>
