--- a/kalori.html
+++ b/kalori.html
@@ -28,7 +28,7 @@
           <!-- Navigation links -->
           <div class="flex-grow hidden md:block">
             <ul class="flex space-x-4">
-              <li><a href="idex.html" class="text-black hover:bg-[#9aff9a] px-3 py-2 rounded-md text-sm font-medium">Home</a></li>
+              <li><a href="index.html" class="text-black hover:bg-[#9aff9a] px-3 py-2 rounded-md text-sm font-medium">Home</a></li>
               <li><a href="article.html" class="text-black hover:bg-[#9aff9a] px-3 py-2 rounded-md text-sm font-medium">Artikel</a></li>
               <li><a href="kalori.html" class="text-black hover:bg-[#9aff9a] px-3 py-2 rounded-md text-sm font-medium">Hitung Kalori</a></li>
               <li><a href="bmi.html" class="text-black hover:bg-[#9aff9a] px-3 py-2 rounded-md text-sm font-medium">Hitung BMI</a></li>
