--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     <!-- End Hero Page 3 Track Calories -->
 
     <!-- Hero Page 4 Track BMI -->
-    <section class="track-bmi">
+    <section class="track-bmi" id="track-bmi">
       <div id="bmi">
         <h2>Track Your BMI</h2>
         <p>Mengetahui berapa berat badan ideal dan bisa mengatur pola hidup sehat, caranya adalah dengan menghitung Body Mass Index (BMI).</p>
